--- a/scr/index.html
+++ b/scr/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/normalize-css.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
     <header>
@@ -132,22 +133,60 @@
         </div>
     </section>
     
-    <section class="opportunities">
+    <section class="mobile">
         <div class="container">
             <div class="row">
-                <div class="opportunities_name col-md-2 offset-md-5">
+                <div class="title col-md-2 offset-md-5">
                     возможности
                 </div>
             </div>
             <div class="row">
-                <div class="h2 opportunities_header col-md-8 offset-md-2">
+                <div class="h2 title_header col-md-8 offset-md-2">
                     мобильное приложение убер
                 </div>
             </div>
             <div class="row">
-                <h3 class="opportunities_subheader col-md-10 offset-md-1">
+                <h3 class="title_subheader col-md-10 offset-md-1">
                     Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон
                 </h3>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_1">
+                        <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
+                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_2">
+                        <div class="mobile_item_subtitle">надежная подача</div>
+                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_3">
+                        <div class="mobile_item_subtitle">прозрачные цены</div>
+                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_4">
+                        <div class="mobile_item_subtitle">безналичная оплата</div>
+                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_5">
+                        <div class="mobile_item_subtitle">обратная связь</div>
+                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile_item mobile_item_6">
+                        <div class="mobile_item_subtitle">разделитьстоимость поездки</div>
+                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
