--- a/scr/index.html
+++ b/scr/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/normalize-css.css">
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -154,41 +153,173 @@
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_1">
                         <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
-                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_2">
                         <div class="mobile_item_subtitle">надежная подача</div>
-                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_3">
                         <div class="mobile_item_subtitle">прозрачные цены</div>
-                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_4">
                         <div class="mobile_item_subtitle">безналичная оплата</div>
-                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_5">
                         <div class="mobile_item_subtitle">обратная связь</div>
-                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_6">
                         <div class="mobile_item_subtitle">разделитьстоимость поездки</div>
-                        <div class="mobile_item_plus"><img src="img/opportunities-img/plus.png" alt="plus"></div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="car">
+        <div class="car_wrapper1"></div><div class="car_wrapper2">
+        </div>
+        <div class="container">
+            <div class="car_title">
+                возможности
+            </div>
+            <h2 class="car_header">
+                Выбор - отличная штука!
+            </h2>
+            <h3 class="car_subheader">
+                Закажите автомобиль, который подходит вам по стилю и бюджету
+            </h3>
+            <img src="img/car-img/car_photo.png" alt="car_uber" class="car_img">
+            <div class="car_text">
+                Машины на каждый день. <br> Лучше, быстрее и дешевле, чем такси
+            </div>
+        </div>
+    </section>
+    
+    <section class="require">
+        <div class="container">
+            <div class="require_micro_header">
+                возможности
+            </div>
+            <h2 class="require_header">
+                условия и требования
+            </h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="require_block">
+                        <div class="require_title">УСЛОВИЯ: со своим авто:</div>
+                        <ul class="require_list">
+                            <li>Подключаем к системе UBER  под 10%.</li>
+                            <li>Ни каких взносов  0%!</li>
+                            <li>Можем подключать удаленно без приезда в офис</li>
+                            <li>ИП не требуется</li>
+                            <li>Заказы распределяются без учета рейтинга ближайшим водителям</li>
+                            <li>Работа только по безналичному расчету</li>
+                            <li>Деньги перечисляем на карту водителю или наличными в офисе </li>
+                        </ul>
+                        <div class="require_descr">
+                            В день заработок составляет 7000-12000р + бонус 3000т рублей
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="require_block">
+                        <div class="require_title">УСЛОВИЯ: со своим авто:</div>
+                        <ul class="require_list">
+                            <li>Предоставляем авто без залога</li>
+                            <li>Без ежедневных выплат по аренде</li>
+                            <li>Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="require_block warning">
+                        <div class="require_title">УСЛОВИЯ: со своим авто:</div>
+                        <ul class="require_list">
+                            <li>Наличие автомобиля без рекламы.</li>
+                            <li>Автомобиль не должен быть желтый и не с желтыми номерами</li>
+                            <li>Машина не старше 3 лет</li>
+                            <li>Стаж вождения не менее 3 лет</li>
+                            <li>Девайс на системе андроид 4.0 и выше(самсунг)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="require_block warning">
+                        <div class="require_title">УСЛОВИЯ: со своим авто:</div>
+                        <ul class="require_list">
+                            <li>Права 2 стороны</li>
+                            <li>Паспорт лицевая сторона</li>
+                            <li>СтС</li>
+                            <li>Лицензия (если есть)</li>
+                            <li>Номер телефона</li>
+                            <li>Номер карты для перечисления денег(указать в письме)!</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="world">
+        <div class="container">
+            <div class="world_title">города</div>
+            <div class="world_header">
+                По всему миру
+            </div>
+            <div class="world_subheader">
+                Мы в вашем городе и по всему миру
+            </div>
+            <a href="#">посмотреть все города</a>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_rentangle"></div>
+            <div class="footer_wrapper_1">
+                <div class="footer_wrapper_1_menu_1">
+                    <a href="#">на главную</a>
+                    <a href="#">города</a>
+                    <a href="#">для водителей</a>
+                </div>
+            </div>
+            <div class="footer_wrapper_2">
+                <div class="footer_wrapper_2_menu_2">
+                    <a href="">центр поддержки</a>
+                    <a href="">ваканrсии</a>
+                    <a href="">разработчики</a>
+                    <a href="">блог</a>
+                    <a href="">о нас</a>
+                </div>
+            </div>
+            <div class="footer_language">
+                русский
+            </div>
+        </div>
+        <div class="footer_messengers">
+            <div class="footer_circle"><a href="#"><img src="img/footer-img/facebook.png" alt=""></a></div>
+            <div class="footer_circle"><a href="#"><img src="img/footer-img/twitter.png" alt=""></a></div>
+            <div class="footer_circle"><a href="#"><img src="img/footer-img/linkedin.png" alt=""></a></div>
+            <div class="footer_circle"><a href="#"><img src="img/footer-img/instagram.png" alt=""></a></div>
+        </div>
+        <div class="footer_links">
+            <a href="#"><img src="img/footer-img/links.png" alt=""></a>
+        </div>
+    </footer>
 </body>
 </html>
