--- a/scr/index.html
+++ b/scr/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/normalize-css.css">
+    <link rel="stylesheet" href="css/style-icomoon.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <header>
+     <header>
         <nav>
             <div class="container">
                 <ul class="menu">
@@ -34,13 +35,13 @@
                             Официальный партнер Uber в Москве
                         </div>
                     </div>
-                    <div class="col-md-2 offset-md-2">
+                    <div class="col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                         <div class="subheader_call">
                             Звоните нам ежедневно
                         </div>
                         <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-3 col-lg-2">
                         <button class="subheader_btn">
                             заказать звонок
                         </button>
@@ -49,8 +50,9 @@
             </div>
         </div>  
     </header>
+
     <section class="promo">
-        <div class="container">
+        <div class="container"> 
             <div class="row">
                 <div class="col-md-10 offset-md-1">
                     <h1 class="promo_header">
@@ -89,7 +91,7 @@
             <div class="benefits_sections_wrapper">
                 <div class="row">
                     <div class="benefits_section col-md-6">
-                        <div class="benefits_img"><img src="img/benefits-img/pay.png" alt=""></div>
+                        <div class="benefits_img red_bg"><img src="img/benefits-img/pay.png" alt=""></div>
                         <div class="benefits_text"><span>Никаких наличных, оплата происходитавтоматически</span><br><br>Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.</div>
                     </div>
                     <div class="benefits_section col-md-6">
@@ -135,52 +137,52 @@
     <section class="mobile">
         <div class="container">
             <div class="row">
-                <div class="title col-md-2 offset-md-5">
+                <div class="title">
                     возможности
                 </div>
             </div>
             <div class="row">
-                <div class="h2 title_header col-md-8 offset-md-2">
+                <div class="title_header">
                     мобильное приложение убер
                 </div>
             </div>
             <div class="row">
-                <h3 class="title_subheader col-md-10 offset-md-1">
+                <h3 class="title_subheader ">
                     Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон
                 </h3>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6 col-xl-4">
                     <div class="mobile_item mobile_item_1">
                         <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-xl-4">
                     <div class="mobile_item mobile_item_2">
                         <div class="mobile_item_subtitle">надежная подача</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-xl-4">
                     <div class="mobile_item mobile_item_3">
                         <div class="mobile_item_subtitle">прозрачные цены</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-xl-4">
                     <div class="mobile_item mobile_item_4">
                         <div class="mobile_item_subtitle">безналичная оплата</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-xl-4">
                     <div class="mobile_item mobile_item_5">
                         <div class="mobile_item_subtitle">обратная связь</div>
                         <div class="mobile_item_plus"></div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-xl-4">
                     <div class="mobile_item mobile_item_6">
                         <div class="mobile_item_subtitle">разделитьстоимость поездки</div>
                         <div class="mobile_item_plus"></div>
