--- a/scr/index.html
+++ b/scr/index.html
@@ -25,23 +25,29 @@
                     <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>    
                 </ul>
             </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>  
         <div class="subheader">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 offset-md-1">
+                    <div class="col-6 col-md-4 offset-md-1">
                         <a href="#" class="subheader_logo"><img src="img/header-img/Uber.png" alt="logo"></a>
                         <div class="subheader_text">
                             Официальный партнер Uber в Москве
                         </div>
                     </div>
-                    <div class="col-md-3 offset-md-1 col-xl-2 offset-xl-2">
+                    <div class="xs_hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                         <div class="subheader_call">
                             Звоните нам ежедневно
                         </div>
-                        <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
+                        <a href="tel:84957970988" class="xs_visible subheader_phone">8 495 797 09 88</a>
                     </div>
-                    <div class="col-md-3 col-lg-2">
+                    <div class="col-6 col-md-3 col-lg-2">
+                        <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
                         <button class="subheader_btn">
                             заказать звонок
                         </button>
@@ -136,21 +142,15 @@
     
     <section class="mobile">
         <div class="container">
-            <div class="row">
-                <div class="title">
-                    возможности
-                </div>
+            <div class="mobile_title">
+                возможности
             </div>
-            <div class="row">
-                <div class="title_header">
-                    мобильное приложение убер
-                </div>
+            <div class="mobile_header">
+                мобильное приложение убер
             </div>
-            <div class="row">
-                <h3 class="title_subheader ">
-                    Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон
-                </h3>
-            </div>
+            <h3 class="mobile_subheader ">
+                Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон
+            </h3>
             <div class="row">
                 <div class="col-md-6 col-xl-4">
                     <div class="mobile_item mobile_item_1">
@@ -193,22 +193,13 @@
     </section>
 
     <section class="car">
-        <div class="car_wrapper1"></div><div class="car_wrapper2">
-        </div>
         <div class="container">
-            <div class="car_title">
-                возможности
-            </div>
-            <h2 class="car_header">
-                Выбор - отличная штука!
-            </h2>
-            <h3 class="car_subheader">
-                Закажите автомобиль, который подходит вам по стилю и бюджету
-            </h3>
-            <img src="img/car-img/car_photo.png" alt="car_uber" class="car_img">
-            <div class="car_text">
-                Машины на каждый день. <br> Лучше, быстрее и дешевле, чем такси
-            </div>
+            <div class="car_wrapper1"></div>
+            <div class="car_micro-header">возможности</div>
+            <h2 class="car_header">Выбор - отличная штука!</h2>
+            <h3 class="car_subheader">Закажите автомобиль, который подходит вам по стилю и бюджету</h3>
+            <img src="img/car-img/car_photo.png" alt="car">
+            <div class="car_descr">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
         </div>
     </section>
     
@@ -312,16 +303,27 @@
             <div class="footer_language">
                 русский
             </div>
+            <div class="s_hidden">
+                <div class="footer_circle"><a href="#"><img src="img/footer-img/facebook.png" alt=""></a></div>
+                <div class="footer_circle"><a href="#"><img src="img/footer-img/twitter.png" alt=""></a></div>
+                <div class="footer_circle"><a href="#"><img src="img/footer-img/linkedin.png" alt=""></a></div>
+                <div class="footer_circle"><a href="#"><img src="img/footer-img/instagram.png" alt=""></a></div>
+            </div>
+            <div class="footer_hidden">
+                <a href="#"><img src="img/footer-img/links.png" alt=""></a>
+            </div>
         </div>
-        <div class="footer_messengers">
+        <div class="s_visible footer_messengers">
             <div class="footer_circle"><a href="#"><img src="img/footer-img/facebook.png" alt=""></a></div>
             <div class="footer_circle"><a href="#"><img src="img/footer-img/twitter.png" alt=""></a></div>
             <div class="footer_circle"><a href="#"><img src="img/footer-img/linkedin.png" alt=""></a></div>
             <div class="footer_circle"><a href="#"><img src="img/footer-img/instagram.png" alt=""></a></div>
         </div>
-        <div class="footer_links">
+        <div class="footer_visible footer_links">
             <a href="#"><img src="img/footer-img/links.png" alt=""></a>
         </div>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
