--- a/scr/index.html
+++ b/scr/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Uber</title>
+    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/fonts.css">
@@ -18,11 +19,11 @@
             <div class="container">
                 <ul class="menu">
                     <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
+                    <li class="menu_item"><a href="#require" class="menu_link">Со своим автомобилем</a></li>
+                    <li class="menu_item"><a href="#require" class="menu_link">На автомобиле компании</a></li>
+                    <li class="menu_item"><a href="#require" class="menu_link">Требования</a></li>
                     <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>    
+                    <li class="menu_item"><a href="#" class="menu_link menu_link_last">Оставить заявку</a></li>    
                 </ul>
             </div>
             <div class="hamburger">
@@ -40,14 +41,14 @@
                             Официальный партнер Uber в Москве
                         </div>
                     </div>
-                    <div class="xs_hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
+                    <div class="xs_visible col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                         <div class="subheader_call">
                             Звоните нам ежедневно
                         </div>
-                        <a href="tel:84957970988" class="xs_visible subheader_phone">8 495 797 09 88</a>
+                        <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
                     </div>
                     <div class="col-6 col-md-3 col-lg-2">
-                        <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
+                        <a href="tel:84957970988" class="xs_hidden subheader_phone">8 495 797 09 88</a>
                         <button class="subheader_btn">
                             заказать звонок
                         </button>
@@ -203,7 +204,7 @@
         </div>
     </section>
     
-    <section class="require">
+    <section class="require" id="require">
         <div class="container">
             <div class="require_micro_header">
                 возможности
